# embedded-lua-cpp

./: .gitignore  CMakeLists.txt  README.md
3pp/lua-5.3.5/: CMakeLists.txt
src/: lua.hpp  main.cpp
